<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">


        <!--Support header-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/settings_Header_SpaceXNow"
            android:textStyle="bold" />
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"

            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#b9b9b9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation"
                android:layout_height="25dp" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:text="@string/Settings_chat_on_discord" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation"
                android:layout_height="25dp" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_follow_on_twitter" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation"
                android:layout_height="25dp" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_subscribe_on_redit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation"
                android:layout_height="25dp" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_revieew_on_googleplay" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation"
                android:layout_height="25dp" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_contribute_on_patreon" />
        </LinearLayout>





        <!--Date Time Settings-->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/settings_Header_DateTime"
            android:textStyle="bold" />
        <View
            android:id="@+id/view12"
            android:layout_width="match_parent"

            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#b9b9b9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Switch
                android:id="@+id/switch1"
                style="@style/MySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_Time_UTC" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_Time_Use_24_Hr" />
        </LinearLayout>


        <!--Date Notification settings-->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/settings_Header_Notificatio"
            android:textStyle="bold" />
        <View
            android:id="@+id/view13"
            android:layout_width="match_parent"

            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#b9b9b9" />
        <!-- View Separator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch3"
                style="@style/Theme.ToggleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_manifet_change" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_upcoming_launch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_new_twitts" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_reddit_threads" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_popular_reddit_thread" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch9"
                android:layout_width="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_new_youtube" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch10"
                android:layout_width="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_webcasts" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch11"
                android:layout_width="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_flickr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch12"
                android:layout_width="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_desable_during_launch" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch13"
                android:layout_width="wrap_content"
                style="@style/Theme.ToggleTheme"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_notifcation_sound" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/exclamation" />

            <Switch
                android:id="@+id/switch14"
                android:layout_width="wrap_content"
                style="@style/MySwitch"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/settings_toggle_notification_vibrate" />
        </LinearLayout>
</LinearLayout>
    </ScrollView>

</FrameLayout>